--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@fortawesome/vue-fontawesome": "^0.1.1",
+    "bootstrap-vue": "^2.0.0-rc.11",
     "vue": "^2.5.2",
+    "vue-awesome": "^3.0.5",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
