--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "vue": "^2.5.2",
     "vue-awesome": "^3.0.5",
     "vue-router": "^3.0.1",
-    "vue2-animate": "^2.0.0"
+    "vue2-animate": "file:vue2-animate"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
