--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ yarn.lock
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+package-lock.jsons
 /test/unit/coverage/
 /test/e2e/reports/
 selenium-debug.log
