--- a/package.json
+++ b/package.json
@@ -15,13 +15,10 @@
   },
   "dependencies": {
     "@fortawesome/vue-fontawesome": "^0.1.1",
-    "animate.css": "^3.6.1",
-    "bootstrap-vue": "^2.0.0-rc.11",
-    "v-animate-css": "0.0.2",
     "vue": "^2.5.2",
     "vue-awesome": "^3.0.5",
     "vue-router": "^3.0.1",
-    "vue2-animate": "file:vue2-animate"
+    "vue2-animate": "^2.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
