--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   },
   "dependencies": {
     "@fortawesome/vue-fontawesome": "^0.1.1",
+    "socket.io-client": "^2.1.1",
     "vue": "^2.5.2",
     "vue-awesome": "^3.0.5",
     "vue-router": "^3.0.1",
+    "vue-socket.io": "^2.1.1-b",
     "vue2-animate": "^2.0.0"
   },
   "devDependencies": {
